--- a/style.css
+++ b/style.css
@@ -1,25 +1,30 @@
 button {
-    cursor: pointer;
-    border: 12px;
-    background-color: black;
-    text-align: center;
-    color: white;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+  text-align: center;
+  color: black;
 }
 #table {
-    border: 12px;
-    background-color: aliceblue;
-    text-align: center;
-    width: 50%;
+  border: 12px;
+  background-color: aliceblue;
+  text-align: center;
+  width: 50%;
 }
 tr {
-    border: 10px solid black;
-    background-color: aqua;
-    height: 20px;
-    width: inherit;
+  border: 2px solid black;
+  background-color: aqua;
+  height: 40px;
+  width: inherit;
 }
 td {
-    border: 5px solid black;
-    background-color: lightgrey;
-    height: 20px;
-    width: 20px;
+  border: 2px solid black;
+  background-color: whitesmoke;
+  height: 40px;
+  width: 40px;
+}
+
+#buttons-div {
+  display: flex;
 }
